Open java.io to stateless test module (#615)
Unlike a real Elasticsearch node, tests run with a single unnamed
module. Yet the JDK still runs modular, meaning any dependencies for
opening JDK modules must be made to the unnamed module at test time.
This commit opens java.io to the stateless internalClusterTest so that
logs there do no spew warnings about failing to change access for fd in
preallocate.